2016-11-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (reload_openvassd): Reinitialize logging on scanner
	reload.

2016-11-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/ntp.c, src/pluginscheduler.c: Fix typos in comments.

2016-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Set to version to 5.2.0 and beta status.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1.1.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* CHANGES: Fix typo.

2016-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 5.1.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Switch version scheme from beta to stable.

	* INSTALL: Remove a prerequisite for GNUTLS certool which is not needed
	anymore in this module.

	* src/openvassd.c (main): Updated (C) year.

2016-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync.in: Change URL for feed tarball
	to use the dedicated community server.

2016-10-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Move the openvas-manage-certs script to module openvas-manager
	because the module openvas-scanner does not need to manage
	certs anymore.

	* tools/openvas-manage-certs.in: Removed.
	This moved to module openvas-manager.

	* tools/README_TOOLS: Adjust to reflect removal.

	* doc/example-openvas-manage-certs.conf.in: Removed.
	This moved to module openvas-manager.

	* doc/openvas-manage-certs.1: Removed.
	This moved to module openvas-manager.

	* CMakeLists.txt: Removed handling of the removed files.

	* COPYING: Remove entry accordingly.

	* doc/openvassd.8.in: Remove reference accordingly.

2016-10-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (pluginlaunch_stop): Add soft_stop argument.

	* src/pluginlaunch.h: Adjust function parameter.
